--- a/题目-失物招领登记与查询系统.md
+++ b/题目-失物招领登记与查询系统.md
@@ -22,5 +22,21 @@
 
 这个程序的查询当前还限制在标签的查询。你有没有什么想法或办法，不通过标签，直接输入相关描述，返回相关的图片？
 
-## [样例程序](https://github.com/lcg-wow/Simple-lost-and-found-management-system)
+----
+## [样例程序（lcg-wow页面）](https://github.com/lcg-wow/Simple-lost-and-found-management-system)
+## [样例程序（BlueberryOreo页面）](https://github.com/BlueberryOreo/Simple-lost-and-found-management-system)
+## 样例程序说明
+
+样例程序包含：\_\_init\_\_.py, main.py, window.py, data
+
+\_\_init\_\_.py为Python package管理文件
+
+main.py为主程序
+
+window.py为创建图形用户界面的程序
+
+data为存储照片和相关标签的文件夹，内含picture文件夹和data.dat
+
+----
+最后更新时间：2022.4.10
 
